docs/tests/typing/bad/testfile-reference_type-2.cpp

int main() { int &y = 42; }

